force-app/main/default/objects/Opportunity/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <formula>TEXT( Account.Gerencia__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal</label>
    <type>Text</type>
</CustomField>