force-app/main/default/objects/Opportunity/fields/Centro_de_Abastecimiento__c.field-meta.xml
<CustomField>
    <fullName>Centro_de_Abastecimiento__c</fullName>
    <formula>Text(Account.Centro_de_Abastecimiento__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centro de Abastecimiento</label>
    <type>Text</type>
</CustomField>