force-app/main/default/objects/Opportunity/fields/Codigo_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_cliente__c</fullName>
    <formula>Account.C_digo_de_cliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo de cliente</label>
    <type>Text</type>
</CustomField>