force-app/main/default/objects/Opportunity/fields/Detalles__c.field-meta.xml
<CustomField>
    <fullName>Detalles__c</fullName>
    <label>Detalles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>