force-app/main/default/objects/Opportunity/fields/Especialidad__c.field-meta.xml
<CustomField>
    <fullName>Especialidad__c</fullName>
    <formula>TEXT( Account.Especialidad__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Especialidad</label>
    <type>Text</type>
</CustomField>