force-app/main/default/objects/Opportunity/fields/Fecha_de_Visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Visita__c</fullName>
    <label>Fecha de Visita</label>
    <type>DateTime</type>
</CustomField>