force-app/main/default/objects/Opportunity/fields/Historico_de_oportunidad_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Historico_de_oportunidad_del_cliente__c</fullName>
    <formula>IF(  MONTH(CloseDate)  =   MONTH( TODAY() - 1) ,  Amount    , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Historico de oportunidad del cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>