force-app/main/default/objects/Opportunity/fields/Horario_de_Recepcion_Max__c.field-meta.xml
<CustomField>
    <fullName>Horario_de_Recepcion_Max__c</fullName>
    <label>Horario de Recepcion Max</label>
    <type>Time</type>
</CustomField>