force-app/main/default/objects/Opportunity/fields/Nombre_de_Fantasia__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Fantasia__c</fullName>
    <formula>Account.Nombre_de_Fantasia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Fantasia</label>
    <type>Text</type>
</CustomField>