force-app/main/default/objects/Opportunity/fields/Observaciones_del_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_del_Cliente__c</fullName>
    <formula>Account.Observaciones_del_Cliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Observaciones del Cliente</label>
    <type>Text</type>
</CustomField>