force-app/main/default/objects/Opportunity/fields/Precio_Recomendado__c.field-meta.xml
<CustomField>
    <fullName>Precio_Recomendado__c</fullName>
    <label>Precio Recomendado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>