force-app/main/default/objects/Opportunity/fields/Proximos_Pasos__c.field-meta.xml
<CustomField>
    <fullName>Proximos_Pasos__c</fullName>
    <label>Proximos Pasos</label>
    <length>150</length>
    <type>Text</type>
</CustomField>