force-app/main/default/objects/Opportunity/fields/Razon_Social__c.field-meta.xml
<CustomField>
    <fullName>Razon_Social__c</fullName>
    <formula>TEXT( Account.Razon_Social__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Razon Social</label>
    <type>Text</type>
</CustomField>