force-app/main/default/objects/Opportunity/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <label>SKU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>