force-app/main/default/objects/Opportunity/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <formula>Text(Account.Sucursal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sucursal</label>
    <type>Text</type>
</CustomField>