force-app/main/default/objects/Opportunity/fields/Valor_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Valor_oportunidad__c</fullName>
    <label>Valor oportunidad Mensual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>