force-app/main/default/objects/Opportunity/listViews/Cadenas.listView-meta.xml
<ListView>
    <fullName>Cadenas</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Cadenas</label>
    <sharedTo>
        <role>Medio_Campo_4</role>
    </sharedTo>
</ListView>