force-app/main/default/objects/Opportunity/listViews/Oportunidades_con_Vencimiento_hoy.listView-meta.xml
<ListView>
    <fullName>Oportunidades_con_Vencimiento_hoy</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Oportunidad Cerrada</value>
    </filters>
    <label>Oportunidades con Vencimiento hoy</label>
    <sharedTo>
        <group>Medio_Campo</group>
    </sharedTo>
</ListView>