force-app/main/default/objects/Opportunity/listViews/Oportunidades_MedioCampo.listView-meta.xml
<ListView>
    <fullName>Oportunidades_MedioCampo</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Team</filterScope>
    <label>Oportunidades MedioCampo</label>
    <sharedTo>
        <role>Medio_Campo_1</role>
        <role>Medio_Campo_10</role>
        <role>Medio_Campo_11</role>
        <role>Medio_Campo_12</role>
        <role>Medio_Campo_13</role>
        <role>Medio_Campo_2</role>
        <role>Medio_Campo_3</role>
        <role>Medio_Campo_4</role>
        <role>Medio_Campo_5</role>
        <role>Medio_Campo_6</role>
        <role>Medio_Campo_7</role>
        <role>Medio_Campo_8</role>
        <role>Medio_Campo_9</role>
    </sharedTo>
</ListView>