force-app/main/default/objects/Opportunity/listViews/oportunidades_team_cafe.listView-meta.xml
<ListView>
    <fullName>oportunidades_team_cafe</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Valor_oportunidad__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>bfran</value>
    </filters>
    <label>Oportunidades Team Café</label>
    <sharedTo>
        <role>Jerarqu_a_Superior</role>
    </sharedTo>
</ListView>